Tue Feb 20 17:56:25 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * COPYING: Clarified how the COPYING file need to be included with
          any code released.  Thanks to Scott Mark <sjm at pobox dot com>
          for helping clarify this.
  
Tue Feb 20 17:59:51 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Deployment/Deployment_TargetManager.idl
        * DAnCE/Deployment/DAnCE_Core.mpc
        * DAnCE/TargetManager/DomainDataManager.h
        * DAnCE/TargetManager/TargetManager.mpc
        * DAnCE/TargetManager/CmpClient.cpp
        * DAnCE/TargetManager/ResourceCommitmentManager.h
        * DAnCE/TargetManager/TargetManagerImpl.idl
        * DAnCE/NodeApplication/Container_Impl.h
        * ciao/Context_Impl_Base.h
        * ciao/Swapping_Container.cpp
        
          Cleared up compile errors from
          Tue Feb 20 16:17:46 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

Tue Feb 20 17:48:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Context_Impl_Base.h:
        * DAnCE/Deployment/NodeApp_CB_Impl.{h,cpp}:
          Removed ACE_THROW_SPEC

Tue Feb 20 17:10:14 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Extension_Context.{h,cpp}:
          Moved to ciao/extension

Tue Feb 20 16:17:46 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * Merged ciao_core_2 to head.

        Tue Feb 20 16:03:02 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * RACE/Plan_Analyzer/Interface/PlanIngress.idl
        * RACE/Planners/Interface/Planner_I.idl
        * RACE/Controller/Component/Controller.idl
        * RACE/Output_Adapters/Interface/PlanEgress.idl
        * RACE/Planner_Manager/Interface/Planner_Manager_I.idl

          Further updates to support migration of Deployment IDL to
          DAnCE/Deployment.

  Mon Feb 19 21:27:11 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/ciao_events_base_dnc.mpb