@@ -5,8 +5,6 @@
 
 #include /**/ "ace/pre.h"
 
-#include "ace/Swap.h"
-
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 #pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
